Docker and index file
commands file

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <body>
     <h1>Hello, World!</h1>
     <h4>This is gowtham's page</h4>
-    <p>{{WELCOME_MESSAGE}}</p>
+    <p>WELCOME_MESSAGE: $WELCOME_MESSAGE</p>
 </body>
 </html>
